kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
